--- a/css/main.sass
+++ b/css/main.sass
@@ -88,7 +88,7 @@ nav
     &:hover
         background-color: white
         padding: 25px 0px
-        border: 1px solid transparentize($base, .9)
+        border-bottom: 1px solid transparentize($base, .9)
         .logo
             img
                 width: 45%
@@ -494,4 +494,36 @@ footer
             text-decoration: none
 
 
+/////////////////////////////////////////////////////////////////////////////
+/////////////////////////////////////////////////////////////////////////////
 
+//Estilos de Portafolio
+
+.grid
+    width: 100%
+    padding: 190px 0px
+    &::after
+        content: ''
+        display: block
+        clear: both
+    
+.grid-item
+    width: 20%  //basado en el numero de imagenes por fila, fila = 100%
+    padding-bottom: 20%
+    overflow: hidden
+    float: left
+    position: relative
+    background-color: black
+    clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%)
+    cursor: pointer
+    margin-top: -130px
+    &::before
+        pointer-events: none
+    &:nth-child(6), &:nth-child(15)
+        margin-left: 130px
+    img
+        width: 100% // mide el 100% del contenedor; El contenedor es del grit-item, que mide de ancho (width) 20%
+        height: 260px
+        object-fit: cover
+
+        
