--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ p {
   color: #494949;
 }
 
-.tSlow, .copy a, footer .social_networks li i, footer .social_networks li, footer .insta, button, input, select, option, textarea, nav ul li a:after, nav ul li a:before, nav ul li a, nav ul .link-active a::after, nav ul, nav, .diamante, .rounded_circle, a {
+.tSlow, .grid-item::before, .grid-item, .copy a, footer .social_networks li i, footer .social_networks li, footer .insta, button, input, select, option, textarea, nav ul li a:after, nav ul li a:before, nav ul li a, nav ul .link-active a::after, nav ul, nav, .diamante, .rounded_circle, a {
   transition: all 0.5s ease-in-out;
 }
 
@@ -337,6 +337,22 @@ button:hover {
     position: relative;
     margin-left: 95px;
   }
+  #portafolio .grid-item {
+    width: 33.33%;
+    margin-top: -110px;
+  }
+  #portafolio .grid-item:nth-child(4), #portafolio .grid-item:nth-child(9), #portafolio .grid-item:nth-child(14), #portafolio .grid-item:nth-child(19), #portafolio .grid-item:nth-child(24), #portafolio .grid-item:nth-child(29) {
+    margin-left: 63px;
+  }
+  #portafolio .grid-item:nth-child(6), #portafolio .grid-item:nth-child(15) {
+    margin-left: 0px;
+  }
+  #portafolio .grid-item img {
+    width: 100%;
+    height: 260px;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
 }
 @media screen and (min-width: 601px) and (max-width: 1199px) {
   #slippry p {
@@ -401,6 +417,27 @@ button:hover {
   footer .social_networks i {
     position: relative;
     margin-left: 260px;
+  }
+  #portafolio .grid-item {
+    width: 25%;
+    margin-top: -110px;
+  }
+  #portafolio .grid-item:nth-child(5), #portafolio .grid-item:nth-child(12), #portafolio .grid-item:nth-child(19), #portafolio .grid-item:nth-child(26) {
+    margin-left: 87px;
+  }
+  #portafolio .grid-item:nth-child(6), #portafolio .grid-item:nth-child(15) {
+    margin-left: 0px;
+  }
+  #portafolio .grid-item img {
+    width: 100%;
+    height: 260px;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+}
+@media screen and (min-width: 1000px) and (max-width: 1199px) {
+  #portafolio .grid-item:nth-child(5), #portafolio .grid-item:nth-child(12), #portafolio .grid-item:nth-child(19), #portafolio .grid-item:nth-child(26) {
+    margin-left: 10px !important;
   }
 }
 footer {
@@ -504,13 +541,20 @@ footer .social_networks li i {
   overflow: hidden;
   float: left;
   position: relative;
-  background-color: black;
+  background-color: blue;
   -webkit-clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
           clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
   cursor: pointer;
   margin-top: -130px;
 }
 .grid-item::before {
+  content: "";
+  position: absolute;
+  background-color: transparent;
+  background-image: none;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
   pointer-events: none;
 }
 .grid-item:nth-child(6), .grid-item:nth-child(15) {
@@ -521,4 +565,15 @@ footer .social_networks li i {
   height: 260px;
   -o-object-fit: cover;
      object-fit: cover;
+}
+.grid-item:hover::before {
+  content: "";
+  position: absolute;
+  background-color: rgba(16, 110, 234, 0.9);
+  background-image: url("../imagenes/mas.png");
+  background-repeat: no-repeat;
+  background-size: 30%;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
 }/*# sourceMappingURL=main.css.map */
