--- a/css/main.sass
+++ b/css/main.sass
@@ -353,15 +353,16 @@ button
     #portafolio
         .grid-item 
             width: 33.33%  //basado en el numero de imagenes por fila, fila = 100%
-            margin-top: -110px
+            margin-top: -80px
             &:nth-child(4), &:nth-child(9), &:nth-child(14), &:nth-child(19),&:nth-child(24), &:nth-child(29)
-                margin-left: 63px
+                margin-left: 57px
             &:nth-child(6), &:nth-child(15)
                 margin-left: 0px
             img
                 width: 100%
                 height: 260px
                 object-fit: cover
+
 
 @media screen and (min-width: 601px) and (max-width: 1199px)
     #slippry
@@ -577,4 +578,13 @@ footer
             background-position: center center
             width: 100%
             height: 100%
-        
+
+/////////////////////////////////////////////////////////////////////////////
+/////////////////////////////////////////////////////////////////////////////
+
+// Estilos de contacto
+.my-form 
+    color: $base
+    .form-control 
+        border-radius: 0
+   
