--- a/css/main.sass
+++ b/css/main.sass
@@ -42,6 +42,10 @@ p
 .margen
     margin-bottom: 15px
 
+.text_job
+    display: flex
+    align-items: center
+
 /////////////////////////////////////////////////////////////////////////////
 /////////////////////////////////////////////////////////////////////////////
 
@@ -71,6 +75,11 @@ p
     z-index: 10
     @extend .tSlow
     @extend .rombo
+
+.img_trabajo
+    width: 99%
+    height: 500px
+    object-fit: cover
 
 /////////////////////////////////////////////////////////////////////////////
 /////////////////////////////////////////////////////////////////////////////
@@ -362,6 +371,14 @@ button
                 width: 100%
                 height: 260px
                 object-fit: cover
+    
+    .img_trabajo
+        width: 75%
+        height: 80%
+        display: flex
+        align-items: center
+        justify-content: center
+        object-fit: cover
 
 
 @media screen and (min-width: 601px) and (max-width: 1199px)
@@ -587,4 +604,26 @@ footer
     color: $base
     .form-control 
         border-radius: 0
-   
+
+.follow-us-container
+    margin-top: 50px
+        margin-bottom: 50px
+    .follow-us
+        font-size: 32px
+        color: $base
+    .social-icon
+        padding: 6px 6px
+        font-size: 50px
+        text-align: center
+        width: 50px
+        height: 50px
+        border: 2px solid #777
+        border-radius: 50%
+        color: #777
+        margin: 5px
+        .social-icon
+            &:hover
+                text-decoration: none
+                color: $base
+                border-color: #434343
+            
